# Fundamental-Analysis

./: .gitignore  Dockerfile  README.md  api.py  app.py  pyproject.toml
src/fundamental_analyst/: crew.py  main.py
src/fundamental_analyst/config/: agents.yaml  tasks.yaml
